--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -69,12 +69,16 @@ h1,h2,h3,h4,h5,h6,
 .article-container h1,.article-container h2,.article-container h3, /* article-container */
 .blox-resume-biography-3 h1,.blox-resume-biography-3 h2,.blox-resume-biography-3 h3, /* resume-biography */
 .blox-resume-biography-3 #profile .portrait-title .text-3xl.font-bold, /* Profil-Name */
-.blox-resume-biography-3 #profile .portrait-title h3, /* Profil-Subline */
+.blox-resume-biography-3 #profile .portrait-title .font-semibold.mb-1, /* Profil-Subline */
 .section-subheading.mb-3 /* section-subheading */ { 
   font-family: var(--vp-font-heading);
   letter-spacing: -0.01em;
   line-height: 1.2;
 }
+
+/* About Me, Profile */
+
+
 
 /* Größen/Weights (lassen Farben unberührt) */
 h1, .prose h1{ font-size: var(--vp-h1-size); font-weight: 700; }
